@startuml
top to bottom direction

' =========================
' UI Layer
' =========================
rectangle "UI Layer" {
  class UI
}

' =========================
' DTO Layer (Clean Mode)
' =========================
rectangle "DTO Adapter Layer" {
  class UserDto
  class UserDtoCrudStore
}

' =========================
' Domain Layer
' =========================
rectangle "Domain Layer" {
  class User
  class UserStore
}

' =========================
' Persistence Layer
' =========================
rectangle "Persistence Layer" {
  class JpaDomainUserStore
  class JpaUserEntity
  class JpaUserRepository
  class CrudStore_Entity
}

' -------------------------
' Clean Mode Flow
' -------------------------
UI --> UserDtoCrudStore : Clean
UserDtoCrudStore --> UserStore
UserStore --> JpaDomainUserStore
JpaDomainUserStore --> JpaUserRepository

' -------------------------
' Rapid Mode Flow
' -------------------------
UI --> UserStore : Rapid

' -------------------------
' Super-Rapid Mode Flow
' -------------------------
UI --> CrudStore_Entity : SuperRapid
CrudStore_Entity --> JpaUserRepository

@enduml
